fix layout bugs

--- a/offline-editor/css/style.css
+++ b/offline-editor/css/style.css
@@ -58,7 +58,8 @@ table {
 }
 
 table#main{
-  height: 100%;
+  /* 84px = 64px (top bar) + 20px (bottom bar) */
+  height: calc(100vh - 84px);
   width: 100%;
   padding-top: 50px;
   padding-bottom: 20px;
